# Adult

./: README.md  pyproject.toml
artifacts/: evaluation_metrics.json  feature_engineering_metadata.json  ingestion_metadata.json  ingestion_report.json  original_feature_order.json  predictions_log.json  preprocessor.joblib  train_reference.parquet  training_metadata.json  transformed_feature_names.json  validation_report.json
artifacts/registry/run_2026-02-28T02-10-01.465395+00-00/: feature_engineering_metadata.json  run_metadata.json  training_metadata.json  training_metrics.json
data/raw/: features.parquet  targets.parquet
models/: income_classifier.joblib
src/: api.py  evaluate.py  features.py  ingest.py  monitor.py  register.py  schemas.py  train.py  validate.py
