[tool.poetry]
name = "adult-mlops-project"
version = "0.1.0"
description = "Pipeline MLOps reproducible con dataset Adult"
authors = ["Ximena Arias"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"

# Core Data
pandas = "2.2.2"
numpy = "1.26.4"
pyarrow = "15.0.2"

# ML
scikit-learn = "1.4.2"
joblib = "1.4.2"

# Dataset
ucimlrepo = "0.0.7"

# Validación
pandera = "0.18.3"

# Experiment Tracking
mlflow = "2.11.3"

# Pipeline
dvc = "3.48.4"

# Utilities
python-dotenv = "1.0.1"
setuptools = "^82.0.0"

# API 
fastapi = "^0.110"
uvicorn = "^0.29"


[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
black = "24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"